# engine

./: .gitignore  CMakeLists.txt  Engine.slnx  Engine.vcxproj  Engine.vcxproj.filters  imgui.ini  main.cpp
Assets/: AssetDatabase.cpp  AssetDatabase.h  AudioImporter.cpp  AudioImporter.h  EmdlFormat.h  MetaFile.cpp  MetaFile.h  ModelImporter.cpp  ModelImporter.h  ProjectFile.cpp  ProjectFile.h  SceneSerializer.cpp  SceneSerializer.h
Assets/Materials/: Material_1.emat  Material_2.emat  Material_3.emat  Material_4.emat  Material_6.emat  pizda test.emat
Assets/Scripts/: spin.lua
Audio/: AudioClipFormat.h  AudioEngine.cpp  AudioEngine.h  miniaudio_impl.cpp
Core/: Branding.h  Guid.cpp  Guid.h
Engine/x64/Debug/: vc145.idb
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate
Engine/x64/Release/: Engine.exe.recipe  Engine.ipdb
Engine/x64/Release/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate
Jobs/: JobSystem.cpp  JobSystem.h
Physics/: PhysicsWorld.cpp  PhysicsWorld.h
Renderer/: EditorCamera.cpp  EditorCamera.h  EnvironmentMap.cpp  EnvironmentMap.h  Framebuffer.cpp  Framebuffer.h  Grid.cpp  Grid.h  LightingGLSL.h  Material.cpp  Material.h  MaterialGraph.cpp  MaterialGraph.h  MaterialManager.cpp  MaterialManager.h  MaterialPreviewRenderer.cpp  MaterialPreviewRenderer.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  NodeCompiler.cpp  NodeCompiler.h  Picking.cpp  Picking.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Scene/: Components.h  GameObject.h  Scene.cpp  Scene.h  Transform.h
Scripting/: LuaScripting.cpp  LuaScripting.h
UI/: EditorStyle.h  EditorUI.cpp  EditorUI.h  IconsFontAwesome6.h  MaterialNodeEditor.cpp  MaterialNodeEditor.h
glad/include/glad/: gl.h
imgui/backends/: imgui_impl_glfw.cpp
x64/Release/: imgui.ini
